# lacert-crypto-esp32

./: .gitignore  BOARD_MEASUREMENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  NOTICE  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3  ЗАМЕРЫ_НА_ПЛАТАХ.md
component-overlay/blake3/: CMakeLists.txt
component-overlay/ml_kem/: CMakeLists.txt  randombytes_esp.c
docs/en/: FIRMWARE.md  FIRMWARE_BUILD.md  LINUX_DEBUG.md  MEASUREMENTS.md  PROTOCOL_SPEC.md
docs/ru/: FIRMWARE.md  FIRMWARE_BUILD.md  LINUX_DEBUG.md  MEASUREMENTS.md  PROTOCOL_SPEC.md
linux-debug/: bench_host.c  build_linux.sh  esp_random.h  lacert_crypto_linux.c  main_linux.c
main/: CMakeLists.txt  lacert_client.c  lacert_client.h  lacert_crypto.c  lacert_crypto.h  lacert_proto.h  lacert_wire.c  lacert_wire.h  main.c
scripts/: fetch-components.sh
